--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,17 +49,14 @@
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name=".views.activity.VendorsDashboardActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".views.activity.VendorCompaniesActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".views.activity.VendorMembersActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
@@ -72,44 +69,42 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".views.activity.VendorsActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <activity
             android:name=".views.activity.CompanyDetailActivity"
             android:label="@string/title_activity_company_detail"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".views.activity.MemberDetailActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".views.activity.VendorMeetingRoomsActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".views.activity.VendorMeetingRoomActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".views.activity.ChatActivity"
-            android:launchMode="singleInstance"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
         <activity
             android:name=".views.activity.VendorMeetingRoomHistoryActivity"
-            android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".views.activity.GroupDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
 
