--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.1.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -168,7 +169,7 @@ dependencies {
     //for Android Permissions
     implementation 'com.karumi:dexter:4.2.0'
 //    compile 'com.firebase:firebase-client-android:2.5.2'
-    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-core:15.0.1'
 
 //    implementation 'android.arch.persistence.room:runtime:1.0.0'
 //    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
@@ -182,8 +183,8 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.xw.repo:xedittext:2.0.8@aar'
 
-    implementation 'com.google.firebase:firebase-database:12.0.1'
-    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-database:15.0.1'
+    implementation 'com.google.firebase:firebase-auth:15.0.1'
 
     implementation "com.mixpanel.android:mixpanel-android:5.+"
 //    compile "com.google.android.gms:play-services-gcm:12.0.0"
