--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".views.activity.SplashActivity"
             android:launchMode="singleInstance">
@@ -107,6 +108,19 @@
             android:name=".views.activity.GroupDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".views.activity.NearbyWorkspacesActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".views.activity.NearbyWorkspaceDetailActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".views.activity.NearbyWorkspaceViewPagerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
         <!-- <receiver -->
         <!-- android:name=".ConnectivityReceiver" -->
