--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,11 @@
-plugins {
-    id 'com.onesignal.androidsdk.onesignal-gradle-plugin' version '0.8.1'
-}
-
 apply plugin: 'com.android.application'
-apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
-apply plugin: 'io.fabric'
+
 apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
+
 android {
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -18,14 +14,14 @@ android {
     }
     defaultConfig {
         applicationId "com.celerstudio.wreelysocial"
-        // TODO: Please update the OneSignal ID below to yours!
-        manifestPlaceholders = [onesignal_app_id               : "b760c5a5-cf5e-4a24-8629-8f7feb57a4b9",
-                                // Project number pulled from dashboard, local value is ignored.
-                                onesignal_google_project_number: 'REMOTE']
+//        manifestPlaceholders = [onesignal_app_id               : "b760c5a5-cf5e-4a24-8629-8f7feb57a4b9",
+//                                // Project number pulled from dashboard, local value is ignored.
+//                                onesignal_google_project_number: 'REMOTE']
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 4
-        versionName "1.2"
+        multiDexEnabled true
+        versionCode 5
+        versionName "1.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "DATA_BASE_NAME", "\"wreelysocial.db\"")
         buildConfigField "int", "DB_VERSION", "1"
@@ -120,8 +116,8 @@ android {
             initWith releasedebug
             debuggable false
             postprocessing {
-                removeUnusedCode false
-                removeUnusedResources false
+                removeUnusedCode true
+                removeUnusedResources true
                 obfuscate false
                 optimizeCode false
                 proguardFile 'proguard-rules.pro'
@@ -146,6 +142,7 @@ dependencies {
     implementation 'com.github.ksoichiro:android-observablescrollview:1.6.0'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:multidex:1.0.3'
     // Support Libraries
     implementation 'com.android.support:cardview-v7:27.1.0'
 
@@ -169,7 +166,9 @@ dependencies {
     //for Android Permissions
     implementation 'com.karumi:dexter:4.2.0'
 //    compile 'com.firebase:firebase-client-android:2.5.2'
-    implementation 'com.google.firebase:firebase-core:15.0.1'
+//    implementation ("com.google.firebase:firebase-core:15.0.1"){
+//        exclude module: 'play-services-ads'
+//    }
 
 //    implementation 'android.arch.persistence.room:runtime:1.0.0'
 //    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
@@ -179,17 +178,17 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:common-java8:1.1.1"
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.xw.repo:xedittext:2.0.8@aar'
 
-    implementation 'com.google.firebase:firebase-database:15.0.1'
-    implementation 'com.google.firebase:firebase-auth:15.0.1'
+//    implementation 'com.google.firebase:firebase-database:15.0.1'
+//    implementation 'com.google.firebase:firebase-auth:15.0.1'
 
     implementation "com.mixpanel.android:mixpanel-android:5.+"
 //    compile "com.google.android.gms:play-services-gcm:12.0.0"
-    implementation 'com.onesignal:OneSignal:[3.8.3, 3.99.99]'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
+//    implementation 'com.onesignal:OneSignal:[3.8.3, 3.99.99]'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
         transitive = true;
     }
     implementation('com.crashlytics.sdk.android:answers:1.4.1@aar') {
@@ -201,6 +200,7 @@ dependencies {
     implementation 'com.sothree.slidinguppanel:library:3.4.0'
 
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation "com.google.android.gms:play-services-location:15.0.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
